# MehDB

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  justfile  mkfile
src/: directory.rs  lib.rs  locking.rs  main.rs  meh.rs  segment.rs  serializer.rs
src/segment/: basic_segmenter.rs  bucket.rs  file_segmenter.rs  header.rs  mod.rs  segment.rs  thread_safe_segmenter.rs
src/worker/: mod.rs  segment_worker.rs
