[package]
name = "mehdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
fnv = "1.0"
bincode = "1.3"
parking_lot = "0.12"
log = "0.4"
pretty_env_logger = "0.4"
highway = "0.8"
bitvec = "1"
cache-padded = "1.2"
simple-error = "0.2"
anyhow = "1"

[env]
RUST_LOG = "debug"
