[package]
name = "mehdb"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
description = "A prototype consistent hashing index"
homepage = "https://github.com/chiefnoah/mehdb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2"
log = "0.4"
pretty_env_logger = "0.5"
highway = "1.3"
bitvec = "1"
cache-padded = "1.2"
simple-error = "0.3"
anyhow = "1"
memmap2 = "0.9.0"
tempfile = "3.3.0"
crossbeam = "0.8.2"
parking_lot = "0.12.1"
thiserror = "2.0.12"

[profile.release]
lto = true
